# GeneralList

./: CMakeLists.txt
includes/: GeneralList.h
src/: CMakeLists.txt  main.cpp
